bugfix: add z-index for map component

--- a/src/components/Map/App.css
+++ b/src/components/Map/App.css
@@ -15,6 +15,7 @@
   background-image: url(../../img/map-bg01.png);
   background-size: cover;
   overflow: hidden;
+  z-index: -999;
 }
 /* x */
 .App {
